<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/transparent">

    <ImageView
        android:id="@+id/iv_toolbar_profile"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_profile"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textColor="@color/text_black"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/iv_toolbar_menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/menu_button_description"
        android:src="@drawable/ic_menu"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/iv_toolbar_shopping_cart"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/shopping_cart_description"
        android:src="@drawable/ic_shopping_cart"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/iv_toolbar_notification"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/notification_description"
        android:src="@drawable/ic_notification"
        android:visibility="visible" />

</androidx.appcompat.widget.Toolbar>